* Jun 8 2001 hship

Vlib:
- Add a new Browser component, used to page through book query results
- Use the Browser on Matches and (twice) on MyBooks

* Jun 7 2001 hship

VlibBeans:
- Add Book.hidden, Book.lendable, Person.verified, Person.locked_out and Person.admin to
  the Vlib database.
- Ship the InstantDB examples JAR, so we can easily run the command-line tool.

Vlib:
- Update UI to reflect the changes in the schema.
- Run in a stateless mode initially.
- Add the 'sticky' parameter to the Border component.
- Return to the Matches page after logging in (via the Login link).
- Rename the Home page to '[Search]' on the navigation bar.
- Improve the Makefile run target to search the source directory first on the classpath.

* May 31 2001 hship

Vlib:
- Change the Publisher.script to use the 1.1 DTD.

* May 30 2001 hship

Fix Tutorial Makefile
Fix some graphic anomlies in the Portal tutorial
Check in the PSP sources for some of the Portal images.
Fix bad public ID in Vlib.application.

* May 29 2001 hship

Portal tutorial:
- Add a hokey "Weather" portlet (to demonstration Direct components in a portlet).

* May 28 2001 hship

Portal tutorial:
- Make the Slashdot page refresh its data every 30 seconds or so.
- Put together a more realistic Stocks portlet.
- Tweak the UI / CSS stuff a little.

* May 26 2001 hship

Initial work on Slashdot portlet.

* May 25 2001 hship

Check in start of the Portal tutorial.

* May 22 2001 hship

Update the tutorial specifications to the 1.1 DTD.

* May 22 2001 hship

Update the Vlib specifications to the 1.1 DTD.

* Feb 13 2001 hship

Deal with "enabled" -> "disabled" change in link component parameters.

* Feb 8 2001 hship

Remove code related to response writer compression (which has been removed from
IResponseWriter).
Configure Vlib to use the asset externalizer.

* Feb 6 2001 hship

Slight changes to Makefiles (due to variable name changes in JBE).

* Jan 30 2001 hship
