@@ -26,7 +26,7 @@
  *
  */
 
-package com.primix.vlib.ejb;
+package com.primix.vlib.ejb.impl;
 
 import javax.ejb.*;
 import java.rmi.*;
@@ -36,6 +36,7 @@ import java.sql.*;
 import javax.naming.*;
 import com.primix.tapestry.util.jdbc.*;
 import com.primix.tapestry.util.ejb.*;
+import com.primix.vlib.ejb.*;
 
 /**
  *  Implementation of a stateful session bean used to query the {@link IBook}
