@@ -26,7 +26,7 @@
  *
  */
 
-package com.primix.vlib.ejb;
+package com.primix.vlib.ejb.impl;
 
 import javax.ejb.*;
 import java.rmi.*;
@@ -37,6 +37,8 @@ import javax.sql.*;
 import java.sql.*;
 import com.primix.tapestry.util.jdbc.*;
 import com.primix.tapestry.util.ejb.*;
+import com.primix.vlib.ejb.*;
+
 
 /**
  *  Implementation of the {@link IOperations} stateless session bean.
